Delete some examples